# pr-wizard

./: .gitignore  README.md
vec1-srv/: Makefile  README.md  main.py  pyproject.toml
vec1-srv/tests/: conftest.py  settings.py  test_chunking_job.py  test_github_pr_source.py  test_polling_job.py  test_polling_job_integration.py  test_queue.py  test_redis_queue.py
vec1-srv/tests/fakes/: __init__.py  clock.py  github.py  logger.py  pr_source.py  queue.py  state_store.py
vec1-srv/vec1/: setup.py
vec1-srv/vec1/config/: __init__.py  settings.py
vec1-srv/vec1/core/chunkers/: __init__.py  base.py  description.py  diff.py
vec1-srv/vec1/core/exceptions/: __init__.py  errors.py
vec1-srv/vec1/core/jobs/: __init__.py  base.py  chunking.py  polling.py
vec1-srv/vec1/core/ports/: __init__.py  clock.py  logger.py  polling_state.py  pr_source.py  queue.py  state_store.py
vec1-srv/vec1/core/schema/: __init__.py  chunk.py  pr.py  queue.py
vec1-srv/vec1/infra/: __init__.py
vec1-srv/vec1/infra/clock/: __init__.py  system.py
vec1-srv/vec1/infra/data/: redis.py
vec1-srv/vec1/infra/github/: __init__.py  client.py  pr_source.py
vec1-srv/vec1/infra/logging/: __init__.py  console.py  logfire.py
vec1-srv/vec1/infra/queue/: __init__.py  memory.py  redis.py
vec1-srv/vec1/infra/state/: __init__.py  file_store.py  polling_state.py
