[project]
name = "vec1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyGithub",
    "logfire",
    "python-dotenv",
    "redis",
]

[dependency-groups]
dev = ["ruff", "pytest", "fakeredis"]
test = ["pytest", "fakeredis"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vec1*"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["vec1", "tests"]

[tool.ruff.lint]
extend-select = ["Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
